--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>FERRE BEBIDAS</title>
 </head>
 <body>
-    
+
     <nav class="navbar navbar-expand-lg bg-secondary">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">FERRE BEBIDAS</a>
@@ -57,7 +57,7 @@
                 </div>
                 <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-                <button type="button" class="btn btn-dark">Terminar compra</button>
+                <button type="button" id="finalizar" class="btn btn-dark">Terminar compra</button>
                 </div>
             </div>
         </div>
@@ -79,6 +79,5 @@
             </div>
         </article>
     </section>
-    
 </body>
 </html>
