--- a/paginas/productos.html
+++ b/paginas/productos.html
@@ -11,6 +11,8 @@
     <script defer src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script defer src="../js/productos.js"></script>
     <script defer src="../js/script.js"></script>
+    <link rel="stylesheet" href="./css/style.css">
+
     <title>FERRE BEBIDAS</title>
 </head>
 <body>
@@ -79,7 +81,7 @@
 
     <section class="d-flex justify-content-center mt-5">
         <article class="container">
-            <div id="contenedor-productos" class="row row-cols-1 row-cols-md-3 g-4">
+            <div id="contenedor-productos" class=" contenedor row row-cols-1 row-cols-md-3 g-4">
                 <div class="card m-3 p-3">
                     <img src="../img/Fernet_Branca.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
