--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="./img/logo corrousel.jpg" class="d-block w-100" alt="...">
+            <img src="./img/logo corrousel.jpg" class="d-block w-100" alt="..." height="585px" >
           </div>
           <div class="carousel-item">
-            <img src="./img/carrousel 1.jpg" class="d-block w-100" alt="...">
+            <img src="./img/carrousel 1.jpg" class="d-block w-100" alt="..." height="585px" >
           </div>
           <div class="carousel-item">
-            <img src="./img/carrousel 2.jpg" class="d-block w-100" alt="...">
+            <img src="./img/carrousel 2.jpg" class="d-block w-100" alt="..." height="585px" >
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
