--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -33,7 +33,7 @@
     <section>
       <div class="contact">
 
-        <form id="contacto" enctype="" action="https://formspree.io/send/ferraropedro12@gmail.com" method="POST" novalidate>
+        <form id="contacto" enctype="" action="https://formspree.io/send/ferraropedro12@gmail.com" method="POST" >
           <div class="mb-3 col-sm-7 contactForm">
               <label for="validationCustom01" class="form-label">Nombre:</label>
               <input type="text" name="nombre" class="form-control" id="validationCustom01" required>
